<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RectangleFragment">

    <LinearLayout
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dimension_a"
                android:gravity="left"
                android:fontFamily="@font/carter_one"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtA"
                    android:layout_marginLeft="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="mm"
                    android:fontFamily="@font/carter_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dimension_b"
                android:gravity="left"
                android:fontFamily="@font/carter_one"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtB"
                    android:layout_marginLeft="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="mm"
                    android:fontFamily="@font/carter_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dimension_r"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:fontFamily="@font/carter_one"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:background="#FFFFFF"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtR"
                    android:layout_marginLeft="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="degrees"
                    android:fontFamily="@font/carter_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/mti_thickness"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:inputType="number"
                android:fontFamily="@font/carter_one"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:background="#FFFFFF"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtThickness"
                    android:layout_marginLeft="10dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="mm"
                    android:fontFamily="@font/carter_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:fontFamily="@font/carter_one"
                android:text="@string/shear_angle" />

            <Spinner
                android:id="@+id/spinnerShearAngle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:spinnerMode="dialog">
            </Spinner>
        </LinearLayout>
        <Button
            android:id="@+id/btnCalculate"
            android:textColor="#5d4ada"
            android:layout_gravity="center_horizontal"
            android:text="Calculate"
            android:fontFamily="@font/carter_one"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

</FrameLayout>